2005-09-18  Ryan Lortie  <desrt@desrt.ca>
	
	* MAINTAINERS: gnome-applets is maintained by Davyd Madeley.

2005-09-04  Ryan Lortie  <desrt@desrt.ca>

	* configure.in:
	* NEWS:
	* README: GNOME 2.12.0 Release.

2005-09-04  Danilo Šegan  <danilo@gnome.org>

	* configure.in: Added Armenian (hy) to ALL_LINGUAS.

2005-08-31  Davyd Madeley  <davyd@madeley.id.au>

	* cpufreq/help/C/cpufreq-applet.xml:
	* cpufreq/help/C/figures/cpufreq-applet-preferences.png:
	* mini-commander/help/C/command-line.xml:
	* mini-commander/help/C/figures/command-line.png:
	* cpufreq/help/C/figures/cpufreq-applet-preferences-smp.png:
	* cpufreq/help/C/figures/cpufreq-applet-selector-both.png:
	- updated documentation for cpufreq and mini-commander

2005-08-29  Ryan Lortie  <desrt@desrt.ca>

	* configure.in:
	* NEWS: release gnome-applets 2.11.93

2005-08-24  Ryan Lortie  <desrt@desrt.ca>

	* configure.in: Add checks for non-portable headers <pty.h> and
	  <values.h>.  Patch from Diego Pettenò <flameeyes@gentoo.org> closes
	  bug #314366.

2005-08-24  Sergey Udaltsov <svu@gnome.org>

	* configure.in:
	do not need pangoxft any more,
	fixing #313368

2005-08-23  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release gnome-applets 2.11.92.1

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* configure.in: requires libgtop 2.11.92

2005-08-23  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release gnome-applets 2.11.92

2005-08-23  Davyd Madeley  <davyd@madeley.id.au>

	* charpick/help/es/char-palette.xml:
	* gtik/help/es/gtik2_applet2.xml:
	* mini-commander/help/es/command-line.xml:
	* mixer/docs/es/mixer_applet2.xml: REMOVED (now generated by g-d-u)

2005-08-14  Sergey Udaltsov <svu@gnome.org>

	* configure.in,gswitchit/Makefile.am:
	fixing #313368

2005-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: Release gnome-applets 2.11.91

2005-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* gweather/weather-metar.c: