@@ -1,3 +1,8 @@
+2005-10-01  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gswitchit/Makefile.am: build fixes, adapted from those submitted by
+	  the Cygwin team. Closes #317636.
+
 2005-09-18  Ryan Lortie  <desrt@desrt.ca>
 	
 	* MAINTAINERS: gnome-applets is maintained by Davyd Madeley.
